# hdf5-udf

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.md  INSTALL.md  LICENSE  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  meson.build  meson_options.txt
config/: allow.json  default.json  deny.json
debian/: README.Debian  changelog  control  copyright  rules
debian-build/: Dockerfile  README.md  create-ppa
examples/: Makefile  add_datasets.cpp  add_datasets.lua  albumlist.csv  benchmark-noop.sh  benchmark.sh  create_files.sh  createh5.cpp  example-add_datasets.cpp  example-add_datasets.cu  example-add_datasets.lua  example-add_datasets.py  example-compound.cpp  example-compound.lua  example-compound.py  example-csv_to_compound.py  example-doom.cpp  example-output_compound.py  example-simple_vector.lua  example-sine_wave.lua  example-socket.cpp  example-string-output.py  example-string.cpp  example-string.lua  example-string.py  no-op.cpp  no-op.cu  no-op.lua  no-op.py  one-dep.cpp  one-dep.lua  one-dep.py  parse_results.py  plot_results.py  readh5.cpp  simple_vector.lua  sine_wave.lua  socket.cpp
fedora/: Dockerfile  README.md  create-yum
fedora/SOURCES/: hdf5.pc
fedora/SPECS/: hdf5-udf.spec  syscall_intercept.spec
python-bindings/: CHANGES.txt  MANIFEST.in  README.txt  build_ext.py  hdf5_udf.py  requirements.txt  setup.py
python-bindings/doc/: conf.py  index.rst  requirements.txt  security.rst  settings.rst
python-bindings/hdf5_udf_resources/: hdf5_udf-schema.json
src/: Makefile  anon_mmap.h  backend.cpp  backend.h  backend_cpp.cpp  backend_cpp.h  backend_cuda.cpp  backend_cuda.h  backend_cuda_mm.cpp  backend_cuda_posix.cpp  backend_gds.cpp  backend_gds.h  backend_gds_mm.cpp  backend_lua.cpp  backend_lua.h  backend_python.cpp  backend_python.h  base64.h  cpp_backend.cpp  cpp_backend.h  dataset.cpp  dataset.h  debug.h  file_search.cpp  file_search.h  file_to_hex.py  filter_id.h  hdf5-udf.cpp  hdf5-udf.h  io_filter.cpp  json.hpp  libudf.cpp  libudf.h  lua_backend.cpp  lua_backend.h  lua_parser.cpp  lua_parser.h  main.cpp  miniz.cpp  modify_elf_section  (+25 more)
test/: example-add_datasets.h5dump  example-compound-nostring_simple.stdout  example-compound-nostring_simple.stdout-lua  example-compound-varstring_mixed_plus_string.h5dump  example-compound-varstring_mixed_plus_string.stdout  example-compound-varstring_simple.stdout  example-compound-varstring_simple.stdout.lua  example-compound.h5dump  example-filepath.stdout-cpp  example-multistring.stdout  example-simple_vector.h5dump  example-sine_wave.h5dump  example-sine_wave.h5dump-lua  example-string.h5dump  example-string2.h5dump  example-string3.h5dump  example-string3.h5dump-cpp  example-varstring.stdout  run_tests.sh  simple_vector.cpp  simple_vector.lua  simple_vector.py  sine_wave.cpp  sine_wave.lua  sine_wave.py  test-compound-nostring.cpp  test-compound-nostring.lua  test-compound-nostring.py  test-compound-output.cpp  test-compound-output.lua  test-compound-output.py  test-compound-plus-string.cpp  test-compound-string.cpp  test-compound-string.lua  test-compound-string.py  test-filepath.cpp  test-filepath.lua  test-filepath.py  test-multi-datasets.cpp  test-multi-datasets.lua  (+11 more)
windows/: install_base.ps1  install_cpp.ps1  install_cpython.ps1  install_helpers.ps1  install_luajit.ps1  installer.nsi
